# mindblowing-sync

./: CMakeLists.txt  README.md  data.cpp  data.h  lab2.drawio  main.cpp  t1.cpp  t1.h  t2.cpp  t2.h  t3.cpp  t3.h  t4.cpp  t4.h  thread_base.cpp  thread_base.h  tthread.cpp  tthread.h
src/: data.cpp  data.h  lab2.drawio  main.cpp  t1.cpp  t1.h  t2.cpp  t2.h  t3.cpp  t3.h  t4.cpp  t4.h  thread_base.cpp  thread_base.h  tthread.cpp  tthread.h
